# readstat-rs

./: .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  AGENTS.md  BENCHMARKING.md  CHANGELOG.md  CRATES-IO-PREP-REVIEW.md  Cargo.toml  LICENSE  PLAN.md  PLAN_STRINGBUILDER.md  README.md  SECURITY.md  build.rs  deny.toml  release.toml  wrapper.h
.github/scripts/: generate-changelog.sh
.github/workflows/: ci.yml  fuzz.yml  main.yml  pages.yml  readstat-sys-ci.yml  verify-bindings.yml
book/: book.toml
book/src/: SUMMARY.md  cheatsheet.md  improvement-roadmap.md  rustdocs.md  visual-guide.md
crates/iconv-sys/: Cargo.toml  README.md  build.rs
crates/iconv-sys/src/: lib.rs
crates/readstat/: Cargo.toml  README.md  release.toml
crates/readstat-cli/: Cargo.toml  README.md  release.toml
crates/readstat-cli/src/: cli.rs  main.rs  run.rs
crates/readstat-iconv-sys/: Cargo.toml  README.md  build.rs  release.toml  wrapper.h
crates/readstat-iconv-sys/src/: lib.rs
crates/readstat-iconv-sys/src/bindings/: bindings_windows_x86_64.rs
crates/readstat-sys/: Cargo.toml  LICENSE  README.md  build.rs  release.toml  verify_bindings.ps1  verify_bindings.sh  wrapper.h
crates/readstat-sys/src/: bindings.rs  lib.rs
crates/readstat-sys/src/bindings/: bindings_linux_x86_64.rs  bindings_macos_x86_64.rs  bindings_windows_x86_64.rs  macos.rs  windows.rs
crates/readstat-tests/: Cargo.toml  README.md
crates/readstat-tests/examples/: verify_parquet_labels.rs
crates/readstat-tests/tests/: arrow_migration_test.rs  bytes_reading_test.rs  cli.rs  cli_data_csv.rs  cli_data_parquet.rs  cli_robustness_test.rs  column_select_test.rs  convenience_api_test.rs  input_file_test.rs  lib.rs  mmap_reading_test.rs  parallel_write_cli_test.rs  parallel_write_test.rs  parquet_labels_test.rs  parse_all_dates_test.rs  parse_all_datetimes_test.rs  parse_all_times_test.rs  parse_all_types_test.rs  parse_cars_md_test.rs  parse_hasmissing_test.rs  parse_intel_test.rs  parse_largepage_err_test.rs  parse_largepage_ok_test.rs  parse_malformed_utf8_test.rs  parse_messydata_test.rs  parse_scientific_notation_test.rs  parse_somedata_test.rs  parse_somemiss_test.rs  row_offset_test.rs  skip_row_count_test.rs  sql_query_test.rs  string_alloc_bench.rs  string_micro_bench.rs
crates/readstat-tests/tests/common/: mod.rs
crates/readstat-tests/tests/data/: README.md  all_dates.sas7bdat  all_times.sas7bdat  all_types.sas7bdat  messydata.sas7bdat  somemiss.sas7bdat
crates/readstat-tests/util/: README.md  create_all_types_ds.sas  create_date_and_datetime_ds2.sas  create_date_time_datetimes_ds.sas  create_malformed_utf8_ds.sas  download_ahs.ps1  download_ahs.sh  sas_date_time_formats.md  sas_format_types.txt
crates/readstat-wasm/: Cargo.toml  README.md
crates/readstat-wasm/.cargo/: config.toml
crates/readstat-wasm/pkg/: package.json  readstat_wasm.js
crates/readstat-wasm/src/: lib.rs
crates/readstat/benches/: README.md  readstat_benchmarks.rs
crates/readstat/proptest-regressions/: cb.txt
crates/readstat/src/: api.rs  cb.rs  common.rs  err.rs  formats.rs  lib.rs  main.rs  progress.rs  rs_buffer_io.rs  rs_data.rs  rs_metadata.rs  rs_parser.rs  rs_path.rs  rs_query.rs  rs_var.rs  rs_write.rs  rs_write_config.rs
data/: README.md  cars.csv  cars.tsv  cars_serde.csv  sample_bincompressed.sas7bdat  somedata.sas7bdat
docs/: ARCHITECTURE.md  BENCHMARKING.md  BUILDING.md  CI-CD.md  FUTURE-STREAMING-SQL.md  IMPROVEMENT-ROADMAP.md  MEMORY-SAFETY.md  MEMORY_SAFETY.md  RELEASING.md  TECHNICAL.md  TESTING.md  USAGE.md  VISUAL-GUIDE.md  WINDOWS_MEMORY_SAFETY_RESEARCH.md  demo.tape  plan-crates-io-release.md  plan-numeric-type-narrowing.md  readstat-cheatsheet.html
examples/api-demo/: README.md
examples/api-demo/python-server/: pyproject.toml  server.py
examples/api-demo/python-server/readstat_py/: Cargo.toml  pyproject.toml
examples/api-demo/python-server/readstat_py/src/: lib.rs
examples/api-demo/rust-server/: Cargo.toml
examples/api-demo/rust-server/src/: main.rs
examples/bun-demo/: .gitignore  README.md  index.ts  package.json  verify_output.py
examples/cli-demo/: README.md  convert.ps1  convert.sh  verify_output.py
examples/sql-explorer/: README.md  index.html
examples/web-demo/: README.md  index.html  readstat_wasm.js  (+1 more)
fuzz/: Cargo.toml
fuzz/corpus/fuzz_read_data_filtered/: all_datetimes.sas7bdat  intel.sas7bdat  malformed_utf8.sas7bdat
fuzz/fuzz_targets/: fuzz_read_data.rs  fuzz_read_data_filtered.rs  fuzz_read_metadata.rs
iconv-sys/: Cargo.toml  build.rs
iconv-sys/src/: lib.rs
readstat/: Cargo.toml  build.rs  wrapper.h
readstat-sys/: Cargo.toml  build.rs
readstat/src/: cb.rs  drive.rs  err.rs  formats.rs  lib.rs  main.rs  read_data.rs  read_metadata.rs  read_preview.rs  rs.rs  rs_data.rs  rs_metadata.rs  rs_parser.rs  rs_path.rs  rs_var.rs  rs_write.rs  util.rs  write_data.rs
readstat/tests/: cli_data_parquet.rs  cli_data_subcommand_to_parquet.rs  get_row_count_test.rs  get_var_count_test.rs  get_var_names_test.rs  input_file_test.rs  parse_all_types_test.rs  parse_cars_md_test.rs  parse_cars_metadata_test.rs  parse_cars_test.rs  parse_file_metadata_test.rs  parse_file_with_missing_data_test.rs  parse_hasmissing_test.rs  parse_largepage_err_test.rs  parse_largepage_ok_test.rs  parse_scientific_notation_test.rs  row_offset_test.rs  skip_row_count_test.rs
readstat/tests/common/: mod.rs
readstat/tests/data/: README.md  all_types.sas7bdat  hasmissing.sas7bdat  scientific_notation.sas7bdat
readstat/tests/to_convert/: row_offset_test.rs
readstat/tests/util/: README.md  create_all_types.sas  create_all_types_ds.sas  create_date_and_datetime_ds.sas  create_scientific_notation_ds.sas
scripts/: build-book.ps1  build-book.sh  check-arrow-lockstep.sh  check-updates.ps1  check-updates.sh  check-vendor-updates.ps1  check-vendor-updates.sh  demo.sh  record-demo.sh  release-check.ps1  release-check.sh  vendor.ps1  vendor.sh
src/: lib.rs  main.rs
util/: README.md  create_date_and_datetime_ds.sas  create_date_and_datetime_ds2.sas  create_rand_ds.sas
(+3 files in other folders)
