[workspace]
members = [
    "crates/readstat-iconv-sys",
    "crates/readstat",
    "crates/readstat-cli",
    "crates/readstat-sys",

    # internal
    "crates/readstat-tests",
]
exclude = [
    "crates/readstat-wasm",
    "examples/api-demo/rust-server",
    "examples/api-demo/python-server/readstat_py",
]
resolver = "2"

# Fields shared by the workspace member crates. Inherited per-crate with
# `<field>.workspace = true`. Note: `license` is hoisted as MIT (the common
# case) but `readstat-iconv-sys` overrides it with its own
# `LGPL-2.1-or-later AND MIT` because it vendors libiconv. `description`,
# `documentation`, `keywords`, and `categories` differ per crate and are not
# hoisted. The excluded `readstat-wasm` crate does not inherit these.
[workspace.package]
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/curtisalexander/readstat-rs"
homepage = "https://github.com/curtisalexander/readstat-rs"

[workspace.dependencies]
# Arrow ecosystem (keep all Arrow crates at the same major version)
arrow = { version = "58", features = ["chrono-tz"] }
arrow-array = "58"
arrow-cast = "58"
arrow-csv = "58"
arrow-ipc = { version = "58", features = ["zstd"] }
arrow-json = "58"
arrow-schema = "58"
parquet = { version = "58", features = ["snap", "zstd", "brotli", "flate2", "lz4"] }

# Shared dependencies
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
log = "0.4"
path_abs = "0.5"
rayon = "1.11"
serde = { version = "1", features = ["derive"] }

# Build dependencies
# Exact pin: bindgen's output format can vary across patch releases,
# which would silently drift the checked-in per-target bindings files
# in `crates/readstat-sys/src/bindings/`. Bumping bindgen is intentional
# and must be paired with regenerating + committing the bindings — the
# `readstat-sys-ci.yml` workflow enforces this on every PR.
bindgen = "=0.72.1"
cc = "1.2"
