[package]
name = "iconv-sys"
version = "0.2.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2021"
description = "Bindings for iconv"
license = "MIT"
repository = "https://github.com/curtisalexander/readstat-rs/iconv-sys"
links = "iconv"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59"
cc = "1.0"

[dependencies]
