[package]
name = "readstat-sys"
version = "0.1.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2018"
description = "Raw bindings to the ReadStat C library"
license = "MIT"
repository = "https://github.com/curtisalexander/readstat-rs"
links = "readstat"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0"
dunce = "1.0"

[dependencies]
