[package]
name = "readstat-sys"
version = "0.2.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2021"
description = "Raw bindings to the ReadStat C library"
license = "MIT"
repository = "https://github.com/curtisalexander/readstat-rs"
links = "readstat"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.60"
cc = "1.0"

[target.'cfg(windows)'.dependencies]
iconv-sys = { path = "../iconv-sys", version = "0.2.0" }
libz-sys = "1.1"
