[package]
name = "readstat"
version = "0.6.1"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2021"
description = "Rust wrapper of the ReadStat C library"
license = "MIT"
repository = "https://github.com/curtisalexander/readstat-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arrow = "6.5"
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
env_logger = "0.9"
indicatif = "0.16"
lazy_static = "1.4"
lexical = "6.0"
log = "0.4"
num-derive = "0.3"
num-format = "0.4"
num-traits = "0.2"
parquet = "6.5"
path_abs = "0.5"
regex = "1.5"
readstat-sys = { path = "../readstat-sys", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
