[package]
name = "readstat"
version = "0.10.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2021"
description = "Rust wrapper of the ReadStat C library"
license = "MIT"
repository = "https://github.com/curtisalexander/readstat-rs"

[dependencies]
arrow2 = { version = "0.13", features = ["full"] }
clap = { version = "3", features = ["derive", "unicode", "wrap_help"] }
crossbeam = "0.8"
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
env_logger = "0.9"
indicatif = "0.17"
lazy_static = "1.4"
lexical = "6.1"
log = "0.4"
num_cpus = "1.13"
num-derive = "0.3"
num-format = "0.4"
num-traits = "0.2"
path_abs = "0.5"
rayon = "1.5"
regex = "1.5"
readstat-sys = { path = "../readstat-sys", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"
