[package]
name = "iconv-sys"
version = "0.3.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2024"
rust-version = "1.85"
description = "Windows-only FFI bindings to libiconv for character encoding conversion"
homepage = "https://github.com/curtisalexander/readstat-rs"
readme = "README.md"
license = "MIT"
repository = "https://github.com/curtisalexander/readstat-rs"
documentation = "https://docs.rs/iconv-sys"
keywords = ["iconv", "ffi", "bindings", "windows"]
categories = ["external-ffi-bindings"]
links = "iconv"
build = "build.rs"

[build-dependencies]
bindgen = "0.72"
cc = "1.2"
