[package]
name = "readstat-cli"
version = "0.19.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2024"
rust-version = "1.85"
description = "CLI for converting SAS binary files to other formats"
homepage = "https://github.com/curtisalexander/readstat-rs"
license = "MIT"
repository = "https://github.com/curtisalexander/readstat-rs"
readme = "README.md"
documentation = "https://docs.rs/readstat-cli"
keywords = ["sas", "sas7bdat", "arrow", "parquet", "readstat"]
categories = ["command-line-utilities"]

[[bin]]
name = "readstat"
path = "src/main.rs"

[dependencies]
readstat = { path = "../readstat", version = "0.19.0" }

arrow-array = { workspace = true }
arrow-csv = { workspace = true, optional = true }
arrow-schema = { workspace = true }

clap = { version = "4", features = ["derive", "unicode", "wrap_help"] }
colored = "3.1"
crossbeam = { workspace = true }
env_logger = "0.11"
indicatif = "0.18"
log = { workspace = true }
path_abs = { workspace = true }
rayon = { workspace = true }

[features]
default = ["csv", "parquet", "feather", "ndjson"]
csv = ["readstat/csv", "dep:arrow-csv"]
parquet = ["readstat/parquet"]
feather = ["readstat/feather"]
ndjson = ["readstat/ndjson"]
sql = ["readstat/sql"]
