[package]
name = "readstat-cli"
version = "0.24.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for converting SAS binary files to other formats"
readme = "README.md"
documentation = "https://curtisalexander.github.io/readstat-rs/usage.html"
keywords = ["sas", "sas7bdat", "arrow", "parquet", "readstat"]
categories = ["command-line-utilities"]

# The `readstat-cli` ARCHITECTURE.md heading is updated by `readstat/release.toml`
# (the two crates share a version and release together), so no per-crate
# replacement is needed here.

[[bin]]
name = "readstat"
path = "src/main.rs"

[dependencies]
readstat = { path = "../readstat", version = "0.24.0" }

arrow-array = { workspace = true }
arrow-csv = { workspace = true, optional = true }
arrow-schema = { workspace = true }

clap = { version = "4", features = ["derive", "unicode", "wrap_help"] }
colored = "3.1"
crossbeam = { workspace = true }
env_logger = "0.11"
indicatif = "0.18"
log = { workspace = true }
path_abs = { workspace = true }
rayon = { workspace = true }
tempfile = { version = "3", optional = true }

[features]
default = ["csv", "parquet", "feather", "ndjson"]
csv = ["readstat/csv", "dep:arrow-csv"]
parquet = ["readstat/parquet", "dep:tempfile"]
feather = ["readstat/feather"]
ndjson = ["readstat/ndjson"]
sql = ["readstat/sql"]
