[package]
name = "readstat-sys"
version = "0.3.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2024"
rust-version = "1.85"
description = "Raw FFI bindings to the ReadStat C library (SAS, SPSS, Stata file formats)"
homepage = "https://github.com/curtisalexander/readstat-rs"
readme = "README.md"
license = "MIT"
repository = "https://github.com/curtisalexander/readstat-rs"
documentation = "https://docs.rs/readstat-sys"
keywords = ["sas", "readstat", "ffi", "bindings"]
categories = ["external-ffi-bindings"]
links = "readstat"
build = "build.rs"
include = [
    "build.rs",
    "src/**",
    "wrapper.h",
    "README.md",
    "vendor/ReadStat/LICENSE",
    "vendor/ReadStat/src/*.c",
    "vendor/ReadStat/src/*.h",
    "vendor/ReadStat/src/sas/**",
    "vendor/ReadStat/src/spss/**",
    "vendor/ReadStat/src/stata/**",
    "vendor/ReadStat/src/txt/**",
]

[features]
# Default builds consume the pre-generated per-target bindings file under
# `src/bindings/` — no `libclang` dependency at consumer build time. Enable
# `buildtime_bindgen` to regenerate the current target's file from
# `wrapper.h`; the build script writes the result to both `OUT_DIR` and
# `src/bindings/bindings_<os>_<arch>.rs` so a maintainer can commit the diff
# (must be run once per supported target).
default = []
buildtime_bindgen = ["dep:bindgen"]

[build-dependencies]
bindgen = { workspace = true, optional = true }
cc = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libz-sys = "1.1"

[target.'cfg(windows)'.dependencies]
readstat-iconv-sys = { path = "../readstat-iconv-sys", version = "0.3.0" }
