[package]
name = "readstat-sys"
version = "0.4.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Raw FFI bindings to the ReadStat C library (SAS, SPSS, Stata file formats)"
readme = "README.md"
documentation = "https://docs.rs/readstat-sys"
keywords = ["sas", "readstat", "ffi", "bindings"]
categories = ["external-ffi-bindings"]
links = "readstat"
build = "build.rs"
# What ships in the crates.io package. Must live in [package] — placing it after
# a [[package.metadata...]] table header silently assigns it to that table.
include = [
    "build.rs",
    "src/**",
    "wrapper.h",
    "README.md",
    "LICENSE",
    "vendor/ReadStat/LICENSE",
    "vendor/ReadStat/src/*.c",
    "vendor/ReadStat/src/*.h",
    "vendor/ReadStat/src/sas/**",
    "vendor/ReadStat/src/spss/**",
    "vendor/ReadStat/src/stata/**",
    "vendor/ReadStat/src/txt/**",
]

# Build docs on the default Linux target, which ships pre-generated bindings —
# no libclang required, and avoids docs.rs attempting the Windows target (which
# would try to compile vendored libiconv).
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

# Release-time version-string replacements live in `release.toml`.

[features]
# Default builds consume the pre-generated per-target bindings file under
# `src/bindings/` — no `libclang` dependency at consumer build time. Enable
# `buildtime_bindgen` to regenerate the current target's file from
# `wrapper.h`; the build script writes the result to both `OUT_DIR` and
# `src/bindings/bindings_<os>_<arch>.rs` so a maintainer can commit the diff
# (must be run once per supported target).
default = []
buildtime_bindgen = ["dep:bindgen"]

[build-dependencies]
bindgen = { workspace = true, optional = true }
cc = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libz-sys = "1.1"

[target.'cfg(windows)'.dependencies]
readstat-iconv-sys = { path = "../readstat-iconv-sys", version = "0.3.1" }
