[package]
name = "readstat-tests"
version = "0.1.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2021"

[dev-dependencies]
# Arrow ecosystem crates
arrow = { version = "54" }
arrow-array = "54"
arrow-cast = "54"
arrow-schema = "54"
assert_cmd = "2.0"
assert_fs = "1.0"
chrono = { version = "0.4", features = ["serde"] }
path_abs = "0.5"
polars = { version = "0.43", features = ["parquet"] }
predicates = "3"
readstat = { path = "../readstat" }

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
