[package]
name = "readstat-tests"
version = "0.1.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2024"

[dev-dependencies]
# Arrow ecosystem crates
arrow = { version = "57" }
arrow-array = "57"
arrow-cast = "57"
arrow-schema = "57"
parquet = "57"
crossbeam = "0.8"
assert_cmd = "2.1"
assert_fs = "1.1"
chrono = { version = "0.4", features = ["serde"] }
escargot = "0.5"
path_abs = "0.5"
polars = { version = "0.52", features = ["parquet"] }
predicates = "3"
readstat = { path = "../readstat" }

[features]
sql = ["readstat/sql"]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
