[package]
name = "readstat-tests"
version = "0.1.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2024"
publish = false

[dev-dependencies]
# Arrow ecosystem crates
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
assert_cmd = "2.1"
assert_fs = "1.1"
escargot = "0.5"
polars = { version = "0.52", features = ["parquet"] }
predicates = "3"
readstat = { path = "../readstat" }

[features]
sql = ["readstat/sql"]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
