[package]
name = "readstat"
version = "0.18.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2024"
description = "Rust wrapper of the ReadStat C library"
license = "MIT"
repository = "https://github.com/curtisalexander/readstat-rs"
documentation = "https://docs.rs/readstat"
readme = "../../README.md"
keywords = ["sas", "sas7bdat", "arrow", "parquet", "readstat"]
categories = ["parser-implementations", "science"]

[[bench]]
name = "readstat_benchmarks"
harness = false

[dependencies]
# Arrow ecosystem crates (core — always required)
arrow = { version = "57", features = ["chrono-tz"] }
arrow-array = "57"
arrow-schema = "57"

# Arrow format writers (optional, feature-gated)
arrow-csv = { version = "57", optional = true }
arrow-ipc = { version = "57", features = ["zstd"], optional = true }
arrow-json = { version = "57", optional = true }
parquet = { version = "57", features = ["snap", "zstd", "brotli", "flate2", "lz4"], optional = true }
tempfile = { version = "3", optional = true }

chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
indicatif = "0.18"
lazy_static = "1.5"
log = "0.4"
memmap2 = "0.9"
num-derive = "0.4"
num-traits = "0.2"
path_abs = "0.5"
rayon = "1.11"
regex = "1.12"
readstat-sys = { path = "../readstat-sys", version = "0.3.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
default = ["csv", "parquet", "feather", "ndjson"]
csv = ["dep:arrow-csv"]
parquet = ["dep:parquet", "dep:tempfile"]
feather = ["dep:arrow-ipc"]
ndjson = ["dep:arrow-json"]
sql = ["dep:datafusion", "dep:tokio", "dep:futures"]

[dependencies.datafusion]
version = "52"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
