[package]
name = "readstat"
version = "0.20.2"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2024"
rust-version = "1.85"
description = "Read SAS binary files (.sas7bdat) and convert to Arrow, Parquet, CSV, and other formats"
homepage = "https://github.com/curtisalexander/readstat-rs"
license = "MIT"
repository = "https://github.com/curtisalexander/readstat-rs"
documentation = "https://docs.rs/readstat"
readme = "README.md"
keywords = ["sas", "sas7bdat", "arrow", "parquet", "readstat"]
categories = ["parser-implementations", "science"]

[[bench]]
name = "readstat_benchmarks"
harness = false

[dependencies]
# Arrow ecosystem crates (core — always required)
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Arrow format writers (optional, feature-gated)
arrow-csv = { workspace = true, optional = true }
arrow-ipc = { workspace = true, optional = true }
arrow-json = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
tempfile = { version = "3", optional = true }

chrono = { workspace = true }
crossbeam = { workspace = true }
log = { workspace = true }
num-derive = "0.4"
num-traits = "0.2"
regex = "1.12"
readstat-sys = { path = "../readstat-sys", version = "0.3.0" }
serde = { workspace = true }
serde_json = "1"
thiserror = "2"

[features]
default = ["csv", "parquet", "feather", "ndjson"]
csv = ["dep:arrow-csv"]
parquet = ["dep:parquet", "dep:tempfile"]
feather = ["dep:arrow-ipc"]
ndjson = ["dep:arrow-json"]
sql = ["dep:datafusion", "dep:tokio", "dep:futures"]

[dependencies.datafusion]
version = "52"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"
path_abs = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
