[project]
name = "readstat-api-server"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34",
]

[tool.uv.sources]
readstat-py = { path = "readstat_py", editable = true }

[dependency-groups]
dev = [
    "maturin>=1.12.4",
]
