[package]
name = "readstat-api-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
readstat = { path = "../../../crates/readstat" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "limit"] }
